--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
         <title>Lessons</title>
 
         <!-- Load external CSS styles -->
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="/styles.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     </head>
 
     <div class="topnav" id="snav">
-        <a href="#home">Home</a>
-        <a href="/lessons" class="active">Lessons</a>
+        <a href="/" class="active">Home</a>
+        <a href="/pashto/">Pashto</a>
+        <a href="lessons/">Lessons</a>"
         <a href="javascript:void(0);" class="icon" onclick="NavToggle()">
             <i class="fa fa-bars"></i>
         </a>
@@ -25,7 +26,7 @@
         <h1>My awesome space</h1>
         
         <!-- Load external JavaScript -->
-        <script src="scripts.js"></script>
+        <script src="/scripts.js"></script>
 
     </body>
 
