--- a/pashto/index.html
+++ b/pashto/index.html
@@ -7,16 +7,15 @@
         <title>Blank template</title>
 
         <!-- Load external CSS styles -->
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="/styles.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     </head>
 
     <div class="topnav" id="snav">
-        <a href="#home" class="active">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
+        <a href="/">Home</a>
+        <a href="/pashto/" class="active">Pashto</a>
+        <a href="lessons/">Lessons</a>"
         <a href="javascript:void(0);" class="icon" onclick="NavToggle()">
             <i class="fa fa-bars"></i>
         </a>
@@ -27,7 +26,7 @@
         <h1>My awesome space</h1>
         
         <!-- Load external JavaScript -->
-        <script src="scripts.js"></script>
+        <script src="/scripts.js"></script>
 
     </body>
 
