--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="topnav" id="snav">
         <a href="/" class="active">Home</a>
         <a href="/pashto/">Pashto</a>
-        <a href="lessons/">Lessons</a>"
+        <a href="/pashto/lessons/">Lessons</a>
         <a href="javascript:void(0);" class="icon" onclick="NavToggle()">
             <i class="fa fa-bars"></i>
         </a>
