--- a/pashto/index.html
+++ b/pashto/index.html
@@ -15,7 +15,7 @@
     <div class="topnav" id="snav">
         <a href="/">Home</a>
         <a href="/pashto/" class="active">Pashto</a>
-        <a href="lessons/">Lessons</a>"
+        <a href="lessons/">Lessons</a>
         <a href="javascript:void(0);" class="icon" onclick="NavToggle()">
             <i class="fa fa-bars"></i>
         </a>
