--- a/pashto/lessons/index.html
+++ b/pashto/lessons/index.html
@@ -15,7 +15,7 @@
     <div class="topnav" id="snav">
         <a href="/">Home</a>
         <a href="/pashto/">Pashto</a>
-        <a href="lessons/" class="active">Lessons</a>"
+        <a href="/pashto/lessons/" class="active">Lessons</a>
         <a href="javascript:void(0);" class="icon" onclick="NavToggle()">
             <i class="fa fa-bars"></i>
         </a>
