--- a/pashto/lessons/alphabet/index.html
+++ b/pashto/lessons/alphabet/index.html
@@ -24,9 +24,8 @@
     <body>
 
         <h1>Pashto Lessons</h1>
-        <p>Welcome to the page of Pashto lessons! Your journey starts here towards learning this mysterious yet beautiful language.
-        Look below to get started!</p>
-        <h2><a href="alphabet/">The Alphabet</a></h2>
+        <p>The alphabet of Pashto is based on a modified Arabic script. It has all of the base characters that you would find in the Arabic alphabet, and on top of that,
+        it has additional letters exclusive to langugages such as Pashto.</p>
         
         <!-- Load external JavaScript -->
         <script src="/scripts.js"></script>
