--- a/pashto/lessons/alphabet/index.html
+++ b/pashto/lessons/alphabet/index.html
@@ -25,7 +25,7 @@
 
         <h1>Pashto Lessons</h1>
         <p>The alphabet of Pashto is based on a modified Arabic script. It has all of the base characters that you would find in the Arabic alphabet, and on top of that,
-        it has additional letters exclusive to langugages such as Pashto.</p>
+        it has additional letters exclusive to languages such as Pashto. Below are the alphabets that make up the Pashto alphabet (these are arranged from left to right):</p>
         
         <!-- Load external JavaScript -->
         <script src="/scripts.js"></script>
