Add a few images of alphabets

--- a/pashto/lessons/alphabet/index.html
+++ b/pashto/lessons/alphabet/index.html
@@ -26,6 +26,16 @@
         <h1>Pashto Lessons</h1>
         <p>The alphabet of Pashto is based on a modified Arabic script. It has all of the base characters that you would find in the Arabic alphabet, and on top of that,
         it has additional letters exclusive to languages such as Pashto. Below are the alphabets that make up the Pashto alphabet (these are arranged from left to right):</p>
+
+        <img src="/assets/alif.png" alt="alif">
+        <img src="/assets/be.png" alt="be">
+        <img src="/assets/pe.png" alt="pe">
+        <img src="/assets/te.png" alt="te">
+        <img src="/assets/te_accent.png" alt="te_accent">
+        <img src="/assets/se.png" alt="se">
+        <img src="/assets/jeem.png" alt="jeem">
+        <img src="/assets/che.png" alt="che">
+        <img src="/assets/dze.png" alt="dze">
         
         <!-- Load external JavaScript -->
         <script src="/scripts.js"></script>
