Add additional alphabets

--- a/pashto/lessons/alphabet/index.html
+++ b/pashto/lessons/alphabet/index.html
@@ -36,6 +36,11 @@
         <img src="/assets/jeem.png" alt="jeem">
         <img src="/assets/che.png" alt="che">
         <img src="/assets/dze.png" alt="dze">
+        <img src="/assets/tse.png" alt="tse">
+        <img src="/assets/he.png" alt="he">
+        <img src="/assets/xe.png" alt="xe">
+        <img src="/assets/daal.png" alt="daal">
+        <img src="/assets/daal_accent.png" alt="daal_accent">
         
         <!-- Load external JavaScript -->
         <script src="/scripts.js"></script>
