Align alphabets to the right (since Pashto is written from right to left)

--- a/pashto/lessons/alphabet/index.html
+++ b/pashto/lessons/alphabet/index.html
@@ -24,23 +24,25 @@
     <body>
 
         <h1>Pashto Lessons</h1>
-        <p>The alphabet of Pashto is based on a modified Arabic script. It has all of the base characters that you would find in the Arabic alphabet, and on top of that,
-        it has additional letters exclusive to languages such as Pashto. Below are the alphabets that make up the Pashto alphabet (these are arranged from left to right):</p>
+        <p>The alphabet of Pashto is based on a modified Arabic script. It has all of the base characters that you would find
+            in the Arabic alphabet, and on top of that, it has additional letters exclusive to languages such as Pashto.
+            Below are the alphabets that make up the Pashto alphabet. Since Pashto is written from right to left,
+            I have similarly arranged the letters from right to left below.</p>
 
-        <img src="/assets/alif.png" alt="alif">
-        <img src="/assets/be.png" alt="be">
-        <img src="/assets/pe.png" alt="pe">
-        <img src="/assets/te.png" alt="te">
-        <img src="/assets/te_accent.png" alt="te_accent">
-        <img src="/assets/se.png" alt="se">
-        <img src="/assets/jeem.png" alt="jeem">
-        <img src="/assets/che.png" alt="che">
-        <img src="/assets/dze.png" alt="dze">
-        <img src="/assets/tse.png" alt="tse">
-        <img src="/assets/he.png" alt="he">
-        <img src="/assets/xe.png" alt="xe">
-        <img src="/assets/daal.png" alt="daal">
-        <img src="/assets/daal_accent.png" alt="daal_accent">
+        <img src="/assets/alif.png" alt="alif" align="right">
+        <img src="/assets/be.png" alt="be" align="right">
+        <img src="/assets/pe.png" alt="pe" align="right">
+        <img src="/assets/te.png" alt="te" align="right">
+        <img src="/assets/te_accent.png" alt="te_accent" align="right">
+        <img src="/assets/se.png" alt="se" align="right">
+        <img src="/assets/jeem.png" alt="jeem" align="right">
+        <img src="/assets/che.png" alt="che" align="right">
+        <img src="/assets/dze.png" alt="dze" align="right">
+        <img src="/assets/tse.png" alt="tse" align="right">
+        <img src="/assets/he.png" alt="he" align="right">
+        <img src="/assets/xe.png" alt="xe" align="right">
+        <img src="/assets/daal.png" alt="daal" align="right">
+        <img src="/assets/daal_accent.png" alt="daal_accent" align="right">
         
         <!-- Load external JavaScript -->
         <script src="/scripts.js"></script>
