Add center justification rule for images

--- a/pashto/lessons/alphabet/index.html
+++ b/pashto/lessons/alphabet/index.html
@@ -29,20 +29,22 @@
             Below are the alphabets that make up the Pashto alphabet. Since Pashto is written from right to left,
             I have similarly arranged the letters from right to left below.</p>
 
-        <img src="/assets/alif.png" alt="alif" align="right">
-        <img src="/assets/be.png" alt="be" align="right">
-        <img src="/assets/pe.png" alt="pe" align="right">
-        <img src="/assets/te.png" alt="te" align="right">
-        <img src="/assets/te_accent.png" alt="te_accent" align="right">
-        <img src="/assets/se.png" alt="se" align="right">
-        <img src="/assets/jeem.png" alt="jeem" align="right">
-        <img src="/assets/che.png" alt="che" align="right">
-        <img src="/assets/dze.png" alt="dze" align="right">
-        <img src="/assets/tse.png" alt="tse" align="right">
-        <img src="/assets/he.png" alt="he" align="right">
-        <img src="/assets/xe.png" alt="xe" align="right">
-        <img src="/assets/daal.png" alt="daal" align="right">
-        <img src="/assets/daal_accent.png" alt="daal_accent" align="right">
+        <div class="alphabet_container">
+            <img class="alphabet_img" src="/assets/alif.png" alt="alif">
+            <img class="alphabet_img" src="/assets/be.png" alt="be">
+            <img class="alphabet_img" src="/assets/pe.png" alt="pe">
+            <img class="alphabet_img" src="/assets/te.png" alt="te">
+            <img class="alphabet_img" src="/assets/te_accent.png" alt="te_accent">
+            <img class="alphabet_img" src="/assets/se.png" alt="se">
+            <img class="alphabet_img" src="/assets/jeem.png" alt="jeem">
+            <img class="alphabet_img" src="/assets/che.png" alt="che">
+            <img class="alphabet_img" src="/assets/dze.png" alt="dze">
+            <img class="alphabet_img" src="/assets/tse.png" alt="tse">
+            <img class="alphabet_img" src="/assets/he.png" alt="he">
+            <img class="alphabet_img" src="/assets/xe.png" alt="xe">
+            <img class="alphabet_img" src="/assets/daal.png" alt="daal">
+            <img class="alphabet_img" src="/assets/daal_accent.png" alt="daal_accent">
+        </div>
         
         <!-- Load external JavaScript -->
         <script src="/scripts.js"></script>
