Add additional alphabets

--- a/pashto/lessons/alphabet/index.html
+++ b/pashto/lessons/alphabet/index.html
@@ -44,6 +44,19 @@
             <img class="alphabet_img" src="/assets/xe.png" alt="xe">
             <img class="alphabet_img" src="/assets/daal.png" alt="daal">
             <img class="alphabet_img" src="/assets/daal_accent.png" alt="daal_accent">
+            <img class="alphabet_img" src="/assets/zaal.png" alt="zaal">
+            <img class="alphabet_img" src="/assets/re.png" alt="re">
+            <img class="alphabet_img" src="/assets/re_accent.png" alt="re_accent">
+            <img class="alphabet_img" src="/assets/ze.png" alt="ze">
+            <img class="alphabet_img" src="/assets/zhe.png" alt="zhe">
+            <img class="alphabet_img" src="/assets/ge.png" alt="ge">
+            <img class="alphabet_img" src="/assets/seen.png" alt="seen">
+            <img class="alphabet_img" src="/assets/sheen.png" alt="sheen">
+            <img class="alphabet_img" src="/assets/xeen.png" alt="xeen">
+            <img class="alphabet_img" src="/assets/saad.png" alt="saad">
+            <img class="alphabet_img" src="/assets/zaad.png" alt="zaad">
+            <img class="alphabet_img" src="/assets/twe.jpg" alt="twe">
+            <img class="alphabet_img" src="/assets/zwe.jpg" alt="zwe">
         </div>
         
         <!-- Load external JavaScript -->
