Add additional alphabets

--- a/pashto/lessons/alphabet/index.html
+++ b/pashto/lessons/alphabet/index.html
@@ -55,8 +55,8 @@
             <img class="alphabet_img" src="/assets/xeen.png" alt="xeen">
             <img class="alphabet_img" src="/assets/saad.png" alt="saad">
             <img class="alphabet_img" src="/assets/zaad.png" alt="zaad">
-            <img class="alphabet_img" src="/assets/twe.jpg" alt="twe">
-            <img class="alphabet_img" src="/assets/zwe.jpg" alt="zwe">
+            <img class="alphabet_img" src="/assets/twe.png" alt="twe">
+            <img class="alphabet_img" src="/assets/zwe.png" alt="zwe">
         </div>
         
         <!-- Load external JavaScript -->
