Finish adding the alphabets

--- a/pashto/lessons/alphabet/index.html
+++ b/pashto/lessons/alphabet/index.html
@@ -57,6 +57,23 @@
             <img class="alphabet_img" src="/assets/zaad.png" alt="zaad">
             <img class="alphabet_img" src="/assets/twe.png" alt="twe">
             <img class="alphabet_img" src="/assets/zwe.png" alt="zwe">
+            <img class="alphabet_img" src="/assets/ayn.png" alt="ayn">
+            <img class="alphabet_img" src="/assets/ghayn.png" alt="ghayn">
+            <img class="alphabet_img" src="/assets/fe.png" alt="fe">
+            <img class="alphabet_img" src="/assets/qaaf.png" alt="qaaf">
+            <img class="alphabet_img" src="/assets/kaaf.png" alt="kaaf">
+            <img class="alphabet_img" src="/assets/gaaf.png" alt="gaaf">
+            <img class="alphabet_img" src="/assets/laam.png" alt="laam">
+            <img class="alphabet_img" src="/assets/meem.png" alt="meem">
+            <img class="alphabet_img" src="/assets/noon.png" alt="noon">
+            <img class="alphabet_img" src="/assets/noon_accent.png" alt="noon_accent">
+            <img class="alphabet_img" src="/assets/waaw.png" alt="waaw">
+            <img class="alphabet_img" src="/assets/he_small.png" alt="he_small">
+            <img class="alphabet_img" src="/assets/naareena_ye.png" alt="naareena_ye">
+            <img class="alphabet_img" src="/assets/tsargunda_ye.png" alt="tsargunda_ye">
+            <img class="alphabet_img" src="/assets/oogda_ye.png" alt="oogda_ye">
+            <img class="alphabet_img" src="/assets/xudzeena_ye.png" alt="xudzeena_ye">
+            <img class="alphabet_img" src="/assets/filee_ye.png" alt="filee_ye">
         </div>
         
         <!-- Load external JavaScript -->
