Update alphabet page

--- a/pashto/lessons/alphabet/index.html
+++ b/pashto/lessons/alphabet/index.html
@@ -31,6 +31,7 @@
 
         <div class="alphabet_container">
             <img class="alphabet_img" src="/assets/alif.png" alt="alif">
+            <p>test</p>
             <img class="alphabet_img" src="/assets/be.png" alt="be">
             <img class="alphabet_img" src="/assets/pe.png" alt="pe">
             <img class="alphabet_img" src="/assets/te.png" alt="te">
