Update alphabet page

--- a/pashto/lessons/alphabet/index.html
+++ b/pashto/lessons/alphabet/index.html
@@ -30,8 +30,11 @@
             I have similarly arranged the letters from right to left below.</p>
 
         <div class="alphabet_container">
+            <figure>
+                <img class="alphabet_img" src="/assets/alif.png" alt="alif">
+                <figcaption>[ɑ]</figcaption>
+            </figure>
             <img class="alphabet_img" src="/assets/alif.png" alt="alif">
-            <p>test</p>
             <img class="alphabet_img" src="/assets/be.png" alt="be">
             <img class="alphabet_img" src="/assets/pe.png" alt="pe">
             <img class="alphabet_img" src="/assets/te.png" alt="te">
