Make .alphabet_img solely under .alphabet_container; add .alphabet_example

--- a/pashto/lessons/alphabet/index.html
+++ b/pashto/lessons/alphabet/index.html
@@ -28,9 +28,9 @@
             in the Arabic alphabet, and on top of that, it has additional letters exclusive to languages such as Pashto.
             Below are the alphabets that make up the Pashto alphabet. Since Pashto is written from right to left,
             I have similarly arranged the letters from right to left below.</p>
-            
+
         <p>The letters are arranged like so:</p>
-        <img class="alphabet_img" src="/assets/alphabet_example.png" alt="Example of how I arranged the letters">
+        <img class="alphabet_example" src="/assets/alphabet_example.png" alt="Example of how I arranged the letters">
 
         <div class="alphabet_container">
             <img class="alphabet_img" src="/assets/alif.png" alt="alif">
