Experiment with background image

--- a/pashto/index.html
+++ b/pashto/index.html
@@ -10,6 +10,15 @@
         <link rel="stylesheet" href="/styles.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+        <style>
+            body {
+                background-image: url("/assets/sabeer_darr_swat_pakistan.jpg");
+                background-size: cover;
+                background-repeat: no-repeat;
+                background-attachment: fixed;
+            }
+        </style>
+
     </head>
 
     <div class="topnav" id="snav">
@@ -23,7 +32,7 @@
 
     <body>
 
-        <h1>My awesome space</h1>
+        <h1>Learn Pashto</h1>
         
         <!-- Load external JavaScript -->
         <script src="/scripts.js"></script>
