--- a/pashto/index.html
+++ b/pashto/index.html
@@ -17,6 +17,13 @@
                 background-repeat: no-repeat;
                 background-attachment: fixed;
             }
+
+            h1 {
+                text-align: center;
+                font-family: "Source Sans Pro", sans-serif;
+                font-weight: normal;
+                color: white;
+            }
         </style>
 
     </head>
