Add some background information about Pashto

--- a/pashto/index.html
+++ b/pashto/index.html
@@ -40,6 +40,37 @@
     <body>
 
         <h1>Learn Pashto</h1>
+
+        <p>Welcome to my home page for learning Pashto! This page is a basic introduction to the Pashto language
+            and why you might want to consider learning it.
+        </p>
+
+        <h2>A Little Bit About Pashto</h2>
+
+        <p>Pashto is part of the Iranian division of the Indo-Iranian group of the Indo-European language family.
+            It has roughly 45 to 55 million speakers, most of whom live in Pakistan and Afghanistan. The ethnic
+            Pashtuns, who also make up the largest ethnic group in Afghanistan, claim Pashto as their native language.
+        </p>
+
+        <h2>Why Learn Pashto?</h2>
+
+        <p>If you ever decide to travel to Afghanistan or Pakistan, having Pashto in your toolkit will prove to be
+            very useful. It is the first language of approximately 40% to 55% of Afghanistan’s population, and it is
+            the second language of approxmiately 10% to 28% of Afghanistan's population. Roughly 15% of Pakistan's
+            population speaks Pashto.
+        </p>
+        <p>Due to the lack of widespread media, literature, and awareness of Pashto, it might seem like Pashto does
+            not have very many speakers. However, interestingly, the number of Pashto speakers is roughly double
+            the number of Dutch speakers, and Dutch is certainly a respectible language! The point is that Pashto
+            has plenty of speakers.
+
+            One of the main contributers to Pashto's lack of influence on today's media is the fact that a sizeable
+            portion of Pashto's speakers are illiterate or have limited literacy. While more and more efforts are being
+            made to increase access to educational opportunities to learn Pashto (especially in Afghanistan and Pakistan),
+            there are still many Pashto speakers who are not able to read or write Pashto. As a native speaker of Pashto
+            who has learned how to read, write, and speak Pashto, I thought that I should make this website so that others,
+            whether native speakers or not, can learn Pashto to the greatest extent possible.
+        </p>
         
         <!-- Load external JavaScript -->
         <script src="/scripts.js"></script>
