Implement text-shadow

--- a/pashto/index.html
+++ b/pashto/index.html
@@ -24,6 +24,10 @@
                 font-weight: normal;
                 color: white;
             }
+
+            p {
+                text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+            }
         </style>
 
     </head>
