--- a/pashto/index.html
+++ b/pashto/index.html
@@ -11,22 +11,35 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
         <style>
-            body {
-                background-image: url("/assets/sabeer_darr_swat_pakistan.jpg");
-                background-size: cover;
-                background-repeat: no-repeat;
-                background-attachment: fixed;
-            }
-
             h1 {
                 text-align: center;
                 font-family: "Source Sans Pro", sans-serif;
                 font-weight: normal;
                 color: white;
+                text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+            }
+
+            h2 {
+                font-family: "Source Sans Pro", sans-serif;
+                font-weight: normal;
+                color: white;
+                text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
             }
 
             p {
-                text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+                font-family: "Roboto", sans-serif;
+                font-weight: normal;
+                color: white;
+                text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
+            }
+
+            body {
+                margin: 0;
+                padding: 0;
+                background-image: url('/assets/sabeer_darr_swat_pakistan.jpg');
+                background-size: cover;
+                background-position: center;
+                position: relative;
             }
         </style>
 
