--- a/pashto/index.html
+++ b/pashto/index.html
@@ -15,21 +15,21 @@
                 text-align: center;
                 font-family: "Source Sans Pro", sans-serif;
                 font-weight: normal;
-                color: white;
+                color: black;
                 text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
             }
 
             h2 {
                 font-family: "Source Sans Pro", sans-serif;
                 font-weight: normal;
-                color: white;
+                color: black;
                 text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
             }
 
             p {
                 font-family: "Roboto", sans-serif;
                 font-weight: normal;
-                color: white;
+                color: black;
                 text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
             }
 
