--- a/pashto/index.html
+++ b/pashto/index.html
@@ -15,26 +15,26 @@
                 text-align: center;
                 font-family: "Source Sans Pro", sans-serif;
                 font-weight: normal;
-                color: black;
+                color: white;
                 text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
             }
 
             h2 {
                 font-family: "Source Sans Pro", sans-serif;
                 font-weight: normal;
-                color: black;
+                color: white;
                 text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
             }
 
             p {
                 font-family: "Roboto", sans-serif;
                 font-weight: normal;
-                color: black;
+                color: white;
                 text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
             }
 
             body {
-                background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('/assets/sabeer_darr_swat_pakistan.jpg');
+                background-image: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url('/assets/sabeer_darr_swat_pakistan.jpg');
                 background-size: cover;
                 background-position: center;
                 margin: 0;
