--- a/pashto/lessons/alphabet/index.html
+++ b/pashto/lessons/alphabet/index.html
@@ -30,7 +30,7 @@
             I have similarly arranged the letters from right to left below.</p>
 
         <p>The letters are arranged like so:</p>
-        <img class="alphabet_example" src="/assets/alphabet_example.png" alt="Example of how I arranged the letters">
+        <img class="alphabet_example" src="/assets/alphabet_example.png" alt="Example of how I arranged the letters" align="right">
 
         <div class="alphabet_container">
             <img class="alphabet_img" src="/assets/alif.png" alt="alif">
