Make alphabet page less cluttered

--- a/pashto/lessons/alphabet/index.html
+++ b/pashto/lessons/alphabet/index.html
@@ -6,7 +6,6 @@
 
         <title>Lessons</title>
 
-        <!-- Load external CSS styles -->
         <link rel="stylesheet" href="/styles.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -25,14 +24,24 @@
 
         <h1>Pashto Lessons</h1>
 
-        <img class="alphabet_example" src="/assets/alphabet_example.png" alt="Example of how I arranged the letters" align="right">
-        
-        <p>The alphabet of Pashto is based on a modified Arabic script. It has all of the base characters that you would find
-            in the Arabic alphabet, and on top of that, it has additional letters exclusive to languages such as Pashto.
-            Below are the alphabets that make up the Pashto alphabet. Since Pashto is written from right to left,
-            I have similarly arranged the letters from right to left below.</p>
+        <div class="alphabet_intro">
 
-        <p>The letters are arranged like so:</p>
+            <div class="alphabet_text">
+
+                <p>The alphabet of Pashto is based on a modified Arabic script. It has all of the base characters that you would find
+                    in the Arabic alphabet, and on top of that, it has additional letters exclusive to languages such as Pashto.
+                    Below are the alphabets that make up the Pashto alphabet. Since Pashto is written from right to left,
+                    I have similarly arranged the letters from right to left below.</p>
+
+                <p>The letters are arranged like so:</p>
+
+            </div>
+
+            <div class="alphabet_legend">
+                <img class="alphabet_example" src="/assets/alphabet_example.png" alt="Example of how I arranged the letters">
+            </div>
+
+        </div>
 
         <div class="alphabet_container">
             <img class="alphabet_img" src="/assets/alif.png" alt="alif">
