--- a/pashto/lessons/alphabet/index.html
+++ b/pashto/lessons/alphabet/index.html
@@ -28,18 +28,21 @@
 
             <div class="alphabet_text">
 
-                <p>The alphabet of Pashto is based on a modified Arabic script. It has all of the base characters that you would find
-                    in the Arabic alphabet, and on top of that, it has additional letters exclusive to languages such as Pashto.
-                    Below are the alphabets that make up the Pashto alphabet. Since Pashto is written from right to left,
-                    I have similarly arranged the letters from right to left below.</p>
+                <p>The alphabet of Pashto is based on a modified version of the Arabic script. It has all of the base characters
+                    that you would find in the Arabic alphabet, and on top of that, it has additional letters exclusive to
+                    languages such as Pashto. Since Pashto has a number of different dialects, some letters can have more than
+                    one acceptable pronunciation. (I have included the different possible pronunciations below the letters.) The
+                    pronunciation depends on which dialect you are speaking. However, all of the letters are written the same way
+                    across all dialects. Below are the alphabets that make up the Pashto alphabet. Since Pashto is written from
+                    right to left, I have similarly arranged the letters from right to left below. The image to the right shows
+                    how I have labeled the letters.
+                </p>
 
                 <p>The letters are arranged like so:</p>
 
             </div>
 
-            <div class="alphabet_legend">
-                <img class="alphabet_example" src="/assets/alphabet_example.png" alt="Example of how I arranged the letters">
-            </div>
+            <img class="alphabet_example" src="/assets/alphabet_example.png" alt="Example of how I arranged the letters">
 
         </div>
 
