Add Montserrat font

--- a/pashto/index.html
+++ b/pashto/index.html
@@ -6,28 +6,28 @@
 
         <title>Learn Pashto</title>
 
-        <!-- Load external CSS styles -->
         <link rel="stylesheet" href="/styles.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 
         <style>
             h1 {
                 text-align: center;
-                font-family: "Source Sans Pro", sans-serif;
+                font-family: "Montserrat", sans-serif;
                 font-weight: normal;
                 color: white;
                 text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
             }
 
             h2 {
-                font-family: "Source Sans Pro", sans-serif;
+                font-family: "Montserrat", sans-serif;
                 font-weight: normal;
                 color: white;
                 text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
             }
 
             p {
-                font-family: "Roboto", sans-serif;
+                font-family: "Montserrat", sans-serif;
                 font-weight: normal;
                 color: white;
                 text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
