--- a/pashto/index.html
+++ b/pashto/index.html
@@ -1,76 +1,69 @@
 <!doctype html>
 
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
 
         <title>Learn Pashto</title>
 
-        <link rel="stylesheet" href="/styles.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link href="https://fonts.googleapis.com/css2?family=Unna&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
         <style>
-            h1 {
-                color: white;
-                text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+            html {
+                min-height: 100%;
             }
-
-            h2 {
-                color: white;
-                text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
-            }
-
-            p {
-                color: white;
-                text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.6);
-            }
-
             body {
-                background-image: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url('/assets/sabeer_darr_swat_pakistan.jpg');
+                background-image: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url('/home/habib/DevHKhan.github.io/assets/sabeer_darr_swat_pakistan.jpg');
                 background-size: cover;
                 background-position: center;
-                position: relative;
             }
         </style>
-
     </head>
 
-    <div class="topnav" id="snav">
-        <a href="/">Home</a>
-        <a href="/pashto/" class="active">Pashto</a>
-        <a href="lessons/">Lessons</a>
-        <a href="javascript:void(0);" class="icon" onclick="NavToggle()">
-            <i class="fa fa-bars"></i>
-        </a>
-    </div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Home</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Pashto <span class="visually-hidden">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="lessons/">Lessons</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <body>
-        <div class="main">
+        <div class="container-fluid mt-3">
 
             <b>
-                <h1>Learn Pashto</h1>
+                <h1 class="text-center text-white">Learn Pashto</h1>
 
-                <p>Welcome to my home page for learning Pashto! This page is a basic introduction to the Pashto language
+                <p class="text-white">Welcome to my home page for learning Pashto! This page is a basic introduction to the Pashto language
                     and why you might want to consider learning it.
                 </p>
 
-                <h2>A Little Bit About Pashto</h2>
+                <h2 class="text-white">A Little Bit About Pashto</h2>
 
-                <p>Pashto is part of the Iranian division of the Indo-Iranian group of the Indo-European language family.
+                <p class="text-white">Pashto is part of the Iranian division of the Indo-Iranian group of the Indo-European language family.
                     It has roughly 45 to 55 million speakers, most of whom live in Pakistan and Afghanistan. The ethnic
                     Pashtuns, who also make up the largest ethnic group in Afghanistan, claim Pashto as their native language.
                 </p>
 
-                <h2>Why Learn Pashto?</h2>
+                <h2 class="text-white">Why Learn Pashto?</h2>
 
-                <p>If you ever decide to travel to Afghanistan or Pakistan, having Pashto in your toolkit will prove to be
+                <p class="text-white">If you ever decide to travel to Afghanistan or Pakistan, having Pashto in your toolkit will prove to be
                     very useful. It is the first language of approximately 40% to 55% of Afghanistan’s population, and it is
                     the second language of approxmiately 10% to 28% of Afghanistan's population. Roughly 15% of Pakistan's
                     population speaks Pashto.
                 </p>
-                <p>Due to the lack of widespread media, literature, and awareness of Pashto, it might seem like Pashto does
+                <p class="text-white">Due to the lack of widespread media, literature, and awareness of Pashto, it might seem like Pashto does
                     not have very many speakers. However, interestingly, the number of Pashto speakers is roughly double
                     the number of Dutch speakers, and Dutch is certainly a respectible language! The point is that Pashto
                     has plenty of speakers.
@@ -85,8 +78,7 @@
             </b>
         </div>
         
-        <!-- Load external JavaScript -->
-        <script src="/scripts.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     </body>
 
