--- a/pashto/index.html
+++ b/pashto/index.html
@@ -13,7 +13,7 @@
                 min-height: 100%;
             }
             body {
-                background-image: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url('/home/habib/DevHKhan.github.io/assets/sabeer_darr_swat_pakistan.jpg');
+                background-image: linear-gradient(rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url('assets/sabeer_darr_swat_pakistan.jpg');
                 background-size: cover;
                 background-position: center;
             }
@@ -22,14 +22,14 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Home</a>
+            <a class="navbar-brand" href="/">Home</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Pashto <span class="visually-hidden">(current)</span></a>
+                        <a class="nav-link active" href=".">Pashto <span class="visually-hidden">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="lessons/">Lessons</a>
