--- a/index.html
+++ b/index.html
@@ -1,35 +1,39 @@
 <!doctype html>
 
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Lessons</title>
+        <title>Home</title>
 
-        <!-- Load external CSS styles -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="/styles.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link href="https://fonts.googleapis.com/css2?family=Unna&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-
     </head>
 
-    <div class="topnav" id="snav">
-        <a href="/" class="active">Home</a>
-        <a href="/pashto/">Pashto</a>
-        <a href="/pashto/lessons/">Lessons</a>
-        <a href="javascript:void(0);" class="icon" onclick="NavToggle()">
-            <i class="fa fa-bars"></i>
-        </a>
-    </div>
-
     <body>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand active" href="/">Home <span class="visually-hidden">(current)</span></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="pashto/">Pashto</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="pashto/lessons/">Lessons</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
 
-        <h1>My awesome space</h1>
+        <div class="container-fluid mt-3">
+            <h1>Home</h1>
+        </div>
         
-        <!-- Load external JavaScript -->
-        <script src="/scripts.js"></script>
-
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
-
 </html>
