--- a/pashto/lessons/alphabet/index.html
+++ b/pashto/lessons/alphabet/index.html
@@ -6,94 +6,98 @@
 
         <title>Lessons</title>
 
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="/styles.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link href="https://fonts.googleapis.com/css2?family=Unna&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 
     </head>
 
-    <div class="topnav" id="snav">
-        <a href="/">Home</a>
-        <a href="/pashto/">Pashto</a>
-        <a href="/pashto/lessons/" class="active">Lessons</a>
-        <a href="javascript:void(0);" class="icon" onclick="NavToggle()">
-            <i class="fa fa-bars"></i>
-        </a>
-    </div>
-
     <body>
-        <h1>Pashto Lessons</h1>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/">Home</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="/pashto/">Pashto</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href=".">Lessons <span class="visually-hidden">(current)</span></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
 
-        <div class="alphabet_intro">
-            <div class="alphabet_text">
+        <div class="container-fluid mt-3">
+            <h1>Pashto Lessons</h1>
 
-                <p>The alphabet of Pashto is based on a modified version of the Arabic script. It has all of the base characters
-                    that you would find in the Arabic alphabet, and on top of that, it has additional letters exclusive to
-                    languages such as Pashto. Since Pashto has a number of different dialects, some letters can have more than
-                    one acceptable pronunciation. (I have included the different possible pronunciations below the letters.) The
-                    pronunciation depends on which dialect you are speaking. However, all of the letters are written the same way
-                    across all dialects. Below are the alphabets that make up the Pashto alphabet. Since Pashto is written from
-                    right to left, I have similarly arranged the letters from right to left below. The image to the right shows
-                    how I have labeled the letters.
-                </p>
+            <div class="alphabet_intro">
+                <div class="alphabet_text">
+                    <p>The alphabet of Pashto is based on a modified version of the Arabic script. It has all of the base characters
+                        that you would find in the Arabic alphabet, and on top of that, it has additional letters exclusive to
+                        languages such as Pashto. Since Pashto has a number of different dialects, some letters can have more than
+                        one acceptable pronunciation. (I have included the different possible pronunciations below the letters.) The
+                        pronunciation depends on which dialect you are speaking. However, all of the letters are written the same way
+                        across all dialects. Below are the alphabets that make up the Pashto alphabet. Since Pashto is written from
+                        right to left, I have similarly arranged the letters from right to left below. The image to the right shows
+                        how I have labeled the letters.
+                    </p>
+                </div>
 
+                <img class="alphabet_example" src="/assets/alphabet_example.png" alt="Example of how I arranged the letters">
             </div>
 
-            <img class="alphabet_example" src="/assets/alphabet_example.png" alt="Example of how I arranged the letters">
-
-        </div>
-
-        <div class="alphabet_container">
-            <img class="alphabet_img" src="/assets/alif.png" alt="alif">
-            <img class="alphabet_img" src="/assets/be.png" alt="be">
-            <img class="alphabet_img" src="/assets/pe.png" alt="pe">
-            <img class="alphabet_img" src="/assets/te.png" alt="te">
-            <img class="alphabet_img" src="/assets/te_accent.png" alt="te_accent">
-            <img class="alphabet_img" src="/assets/se.png" alt="se">
-            <img class="alphabet_img" src="/assets/jeem.png" alt="jeem">
-            <img class="alphabet_img" src="/assets/che.png" alt="che">
-            <img class="alphabet_img" src="/assets/dze.png" alt="dze">
-            <img class="alphabet_img" src="/assets/tse.png" alt="tse">
-            <img class="alphabet_img" src="/assets/he.png" alt="he">
-            <img class="alphabet_img" src="/assets/xe.png" alt="xe">
-            <img class="alphabet_img" src="/assets/daal.png" alt="daal">
-            <img class="alphabet_img" src="/assets/daal_accent.png" alt="daal_accent">
-            <img class="alphabet_img" src="/assets/zaal.png" alt="zaal">
-            <img class="alphabet_img" src="/assets/re.png" alt="re">
-            <img class="alphabet_img" src="/assets/re_accent.png" alt="re_accent">
-            <img class="alphabet_img" src="/assets/ze.png" alt="ze">
-            <img class="alphabet_img" src="/assets/zhe.png" alt="zhe">
-            <img class="alphabet_img" src="/assets/ge.png" alt="ge">
-            <img class="alphabet_img" src="/assets/seen.png" alt="seen">
-            <img class="alphabet_img" src="/assets/sheen.png" alt="sheen">
-            <img class="alphabet_img" src="/assets/xeen.png" alt="xeen">
-            <img class="alphabet_img" src="/assets/saad.png" alt="saad">
-            <img class="alphabet_img" src="/assets/zaad.png" alt="zaad">
-            <img class="alphabet_img" src="/assets/twe.png" alt="twe">
-            <img class="alphabet_img" src="/assets/zwe.png" alt="zwe">
-            <img class="alphabet_img" src="/assets/ayn.png" alt="ayn">
-            <img class="alphabet_img" src="/assets/ghayn.png" alt="ghayn">
-            <img class="alphabet_img" src="/assets/fe.png" alt="fe">
-            <img class="alphabet_img" src="/assets/qaaf.png" alt="qaaf">
-            <img class="alphabet_img" src="/assets/kaaf.png" alt="kaaf">
-            <img class="alphabet_img" src="/assets/gaaf.png" alt="gaaf">
-            <img class="alphabet_img" src="/assets/laam.png" alt="laam">
-            <img class="alphabet_img" src="/assets/meem.png" alt="meem">
-            <img class="alphabet_img" src="/assets/noon.png" alt="noon">
-            <img class="alphabet_img" src="/assets/noon_accent.png" alt="noon_accent">
-            <img class="alphabet_img" src="/assets/waaw.png" alt="waaw">
-            <img class="alphabet_img" src="/assets/he_small.png" alt="he_small">
-            <img class="alphabet_img" src="/assets/naareena_ye.png" alt="naareena_ye">
-            <img class="alphabet_img" src="/assets/tsargunda_ye.png" alt="tsargunda_ye">
-            <img class="alphabet_img" src="/assets/oogda_ye.png" alt="oogda_ye">
-            <img class="alphabet_img" src="/assets/xudzeena_ye.png" alt="xudzeena_ye">
-            <img class="alphabet_img" src="/assets/filee_ye.png" alt="filee_ye">
+            <div class="alphabet_container">
+                <img class="alphabet_img" src="/assets/alif.png" alt="alif">
+                <img class="alphabet_img" src="/assets/be.png" alt="be">
+                <img class="alphabet_img" src="/assets/pe.png" alt="pe">
+                <img class="alphabet_img" src="/assets/te.png" alt="te">
+                <img class="alphabet_img" src="/assets/te_accent.png" alt="te_accent">
+                <img class="alphabet_img" src="/assets/se.png" alt="se">
+                <img class="alphabet_img" src="/assets/jeem.png" alt="jeem">
+                <img class="alphabet_img" src="/assets/che.png" alt="che">
+                <img class="alphabet_img" src="/assets/dze.png" alt="dze">
+                <img class="alphabet_img" src="/assets/tse.png" alt="tse">
+                <img class="alphabet_img" src="/assets/he.png" alt="he">
+                <img class="alphabet_img" src="/assets/xe.png" alt="xe">
+                <img class="alphabet_img" src="/assets/daal.png" alt="daal">
+                <img class="alphabet_img" src="/assets/daal_accent.png" alt="daal_accent">
+                <img class="alphabet_img" src="/assets/zaal.png" alt="zaal">
+                <img class="alphabet_img" src="/assets/re.png" alt="re">
+                <img class="alphabet_img" src="/assets/re_accent.png" alt="re_accent">
+                <img class="alphabet_img" src="/assets/ze.png" alt="ze">
+                <img class="alphabet_img" src="/assets/zhe.png" alt="zhe">
+                <img class="alphabet_img" src="/assets/ge.png" alt="ge">
+                <img class="alphabet_img" src="/assets/seen.png" alt="seen">
+                <img class="alphabet_img" src="/assets/sheen.png" alt="sheen">
+                <img class="alphabet_img" src="/assets/xeen.png" alt="xeen">
+                <img class="alphabet_img" src="/assets/saad.png" alt="saad">
+                <img class="alphabet_img" src="/assets/zaad.png" alt="zaad">
+                <img class="alphabet_img" src="/assets/twe.png" alt="twe">
+                <img class="alphabet_img" src="/assets/zwe.png" alt="zwe">
+                <img class="alphabet_img" src="/assets/ayn.png" alt="ayn">
+                <img class="alphabet_img" src="/assets/ghayn.png" alt="ghayn">
+                <img class="alphabet_img" src="/assets/fe.png" alt="fe">
+                <img class="alphabet_img" src="/assets/qaaf.png" alt="qaaf">
+                <img class="alphabet_img" src="/assets/kaaf.png" alt="kaaf">
+                <img class="alphabet_img" src="/assets/gaaf.png" alt="gaaf">
+                <img class="alphabet_img" src="/assets/laam.png" alt="laam">
+                <img class="alphabet_img" src="/assets/meem.png" alt="meem">
+                <img class="alphabet_img" src="/assets/noon.png" alt="noon">
+                <img class="alphabet_img" src="/assets/noon_accent.png" alt="noon_accent">
+                <img class="alphabet_img" src="/assets/waaw.png" alt="waaw">
+                <img class="alphabet_img" src="/assets/he_small.png" alt="he_small">
+                <img class="alphabet_img" src="/assets/naareena_ye.png" alt="naareena_ye">
+                <img class="alphabet_img" src="/assets/tsargunda_ye.png" alt="tsargunda_ye">
+                <img class="alphabet_img" src="/assets/oogda_ye.png" alt="oogda_ye">
+                <img class="alphabet_img" src="/assets/xudzeena_ye.png" alt="xudzeena_ye">
+                <img class="alphabet_img" src="/assets/filee_ye.png" alt="filee_ye">
+            </div>
         </div>
         
-        <!-- Load external JavaScript -->
-        <script src="/scripts.js"></script>
-
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
-
 </html>
