Transition to Bootstrap 5

--- a/pashto/lessons/alphabet/index.html
+++ b/pashto/lessons/alphabet/index.html
@@ -34,9 +34,8 @@
         <div class="container-fluid mt-3">
             <h1 class="text-center">Pashto Lessons</h1>
 
-            <div class="alphabet_intro">
-                <div class="alphabet_text">
-                    <p>The alphabet of Pashto is based on a modified version of the Arabic script. It has all of the base characters
+            <div class="d-flex flex-wrap justify-content-center">
+                <p>The alphabet of Pashto is based on a modified version of the Arabic script. It has all of the base characters
                         that you would find in the Arabic alphabet, and on top of that, it has additional letters exclusive to
                         languages such as Pashto. Since Pashto has a number of different dialects, some letters can have more than
                         one acceptable pronunciation. (I have included the different possible pronunciations below the letters.) The
@@ -44,57 +43,56 @@
                         across all dialects. Below are the alphabets that make up the Pashto alphabet. Since Pashto is written from
                         right to left, I have similarly arranged the letters from right to left below. The image to the right shows
                         how I have labeled the letters.
-                    </p>
-                </div>
+                </p>
 
-                <img class="alphabet_example" src="/assets/alphabet_example.png" alt="Example of how I arranged the letters">
+                <img src="/assets/alphabet_example.png" alt="Example of how I arranged the letters">
             </div>
 
             <div class="d-flex flex-wrap justify-content-center flex-row-reverse gap-1">
-                <img class="alphabet_img" src="/assets/alif.png" alt="alif">
-                <img class="alphabet_img" src="/assets/be.png" alt="be">
-                <img class="alphabet_img" src="/assets/pe.png" alt="pe">
-                <img class="alphabet_img" src="/assets/te.png" alt="te">
-                <img class="alphabet_img" src="/assets/te_accent.png" alt="te_accent">
-                <img class="alphabet_img" src="/assets/se.png" alt="se">
-                <img class="alphabet_img" src="/assets/jeem.png" alt="jeem">
-                <img class="alphabet_img" src="/assets/che.png" alt="che">
-                <img class="alphabet_img" src="/assets/dze.png" alt="dze">
-                <img class="alphabet_img" src="/assets/tse.png" alt="tse">
-                <img class="alphabet_img" src="/assets/he.png" alt="he">
-                <img class="alphabet_img" src="/assets/xe.png" alt="xe">
-                <img class="alphabet_img" src="/assets/daal.png" alt="daal">
-                <img class="alphabet_img" src="/assets/daal_accent.png" alt="daal_accent">
-                <img class="alphabet_img" src="/assets/zaal.png" alt="zaal">
-                <img class="alphabet_img" src="/assets/re.png" alt="re">
-                <img class="alphabet_img" src="/assets/re_accent.png" alt="re_accent">
-                <img class="alphabet_img" src="/assets/ze.png" alt="ze">
-                <img class="alphabet_img" src="/assets/zhe.png" alt="zhe">
-                <img class="alphabet_img" src="/assets/ge.png" alt="ge">
-                <img class="alphabet_img" src="/assets/seen.png" alt="seen">
-                <img class="alphabet_img" src="/assets/sheen.png" alt="sheen">
-                <img class="alphabet_img" src="/assets/xeen.png" alt="xeen">
-                <img class="alphabet_img" src="/assets/saad.png" alt="saad">
-                <img class="alphabet_img" src="/assets/zaad.png" alt="zaad">
-                <img class="alphabet_img" src="/assets/twe.png" alt="twe">
-                <img class="alphabet_img" src="/assets/zwe.png" alt="zwe">
-                <img class="alphabet_img" src="/assets/ayn.png" alt="ayn">
-                <img class="alphabet_img" src="/assets/ghayn.png" alt="ghayn">
-                <img class="alphabet_img" src="/assets/fe.png" alt="fe">
-                <img class="alphabet_img" src="/assets/qaaf.png" alt="qaaf">
-                <img class="alphabet_img" src="/assets/kaaf.png" alt="kaaf">
-                <img class="alphabet_img" src="/assets/gaaf.png" alt="gaaf">
-                <img class="alphabet_img" src="/assets/laam.png" alt="laam">
-                <img class="alphabet_img" src="/assets/meem.png" alt="meem">
-                <img class="alphabet_img" src="/assets/noon.png" alt="noon">
-                <img class="alphabet_img" src="/assets/noon_accent.png" alt="noon_accent">
-                <img class="alphabet_img" src="/assets/waaw.png" alt="waaw">
-                <img class="alphabet_img" src="/assets/he_small.png" alt="he_small">
-                <img class="alphabet_img" src="/assets/naareena_ye.png" alt="naareena_ye">
-                <img class="alphabet_img" src="/assets/tsargunda_ye.png" alt="tsargunda_ye">
-                <img class="alphabet_img" src="/assets/oogda_ye.png" alt="oogda_ye">
-                <img class="alphabet_img" src="/assets/xudzeena_ye.png" alt="xudzeena_ye">
-                <img class="alphabet_img" src="/assets/filee_ye.png" alt="filee_ye">
+                <img src="/assets/alif.png" alt="alif">
+                <img src="/assets/be.png" alt="be">
+                <img src="/assets/pe.png" alt="pe">
+                <img src="/assets/te.png" alt="te">
+                <img src="/assets/te_accent.png" alt="te_accent">
+                <img src="/assets/se.png" alt="se">
+                <img src="/assets/jeem.png" alt="jeem">
+                <img src="/assets/che.png" alt="che">
+                <img src="/assets/dze.png" alt="dze">
+                <img src="/assets/tse.png" alt="tse">
+                <img src="/assets/he.png" alt="he">
+                <img src="/assets/xe.png" alt="xe">
+                <img src="/assets/daal.png" alt="daal">
+                <img src="/assets/daal_accent.png" alt="daal_accent">
+                <img src="/assets/zaal.png" alt="zaal">
+                <img src="/assets/re.png" alt="re">
+                <img src="/assets/re_accent.png" alt="re_accent">
+                <img src="/assets/ze.png" alt="ze">
+                <img src="/assets/zhe.png" alt="zhe">
+                <img src="/assets/ge.png" alt="ge">
+                <img src="/assets/seen.png" alt="seen">
+                <img src="/assets/sheen.png" alt="sheen">
+                <img src="/assets/xeen.png" alt="xeen">
+                <img src="/assets/saad.png" alt="saad">
+                <img src="/assets/zaad.png" alt="zaad">
+                <img src="/assets/twe.png" alt="twe">
+                <img src="/assets/zwe.png" alt="zwe">
+                <img src="/assets/ayn.png" alt="ayn">
+                <img src="/assets/ghayn.png" alt="ghayn">
+                <img src="/assets/fe.png" alt="fe">
+                <img src="/assets/qaaf.png" alt="qaaf">
+                <img src="/assets/kaaf.png" alt="kaaf">
+                <img src="/assets/gaaf.png" alt="gaaf">
+                <img src="/assets/laam.png" alt="laam">
+                <img src="/assets/meem.png" alt="meem">
+                <img src="/assets/noon.png" alt="noon">
+                <img src="/assets/noon_accent.png" alt="noon_accent">
+                <img src="/assets/waaw.png" alt="waaw">
+                <img src="/assets/he_small.png" alt="he_small">
+                <img src="/assets/naareena_ye.png" alt="naareena_ye">
+                <img src="/assets/tsargunda_ye.png" alt="tsargunda_ye">
+                <img src="/assets/oogda_ye.png" alt="oogda_ye">
+                <img src="/assets/xudzeena_ye.png" alt="xudzeena_ye">
+                <img src="/assets/filee_ye.png" alt="filee_ye">
             </div>
         </div>
         
