Improve text and image proportions

--- a/pashto/lessons/alphabet/index.html
+++ b/pashto/lessons/alphabet/index.html
@@ -45,7 +45,7 @@
                         how I have labeled the letters.
                 </p>
 
-                <img class="w-25" src="/assets/alphabet_example.png" alt="Example of how I arranged the letters">
+                <img src="/assets/alphabet_example.png" alt="Example of how I arranged the letters">
             </div>
 
             <div class="d-flex flex-wrap justify-content-center flex-row-reverse gap-1">
