Improve text and image proportions

--- a/pashto/lessons/alphabet/index.html
+++ b/pashto/lessons/alphabet/index.html
@@ -34,7 +34,7 @@
         <div class="container-fluid mt-3">
             <h1 class="text-center">Pashto Lessons</h1>
 
-            <div class="d-flex flex-wrap flex-row">
+            <div class="d-flex flex-wrap flex-row mb-5">
                 <p style="max-width: 87%;">The alphabet of Pashto is based on a modified version of the Arabic script. It has all of the base characters
                         that you would find in the Arabic alphabet, and on top of that, it has additional letters exclusive to
                         languages such as Pashto. Since Pashto has a number of different dialects, some letters can have more than
