Improve text and image proportions

--- a/pashto/lessons/alphabet/index.html
+++ b/pashto/lessons/alphabet/index.html
@@ -41,7 +41,7 @@
                         one acceptable pronunciation. (I have included the different possible pronunciations below the letters.) The
                         pronunciation depends on which dialect you are speaking. However, all of the letters are written the same way
                         across all dialects. Below are the alphabets that make up the Pashto alphabet. Since Pashto is written from
-                        right to left, I have similarly arranged the letters from right to left below. The image to the right shows
+                        right to left, I have similarly arranged the letters from right to left below. The colored image shows
                         how I have labeled the letters.
                 </p>
 
