Add breadcrumb navigation

--- a/pashto/lessons/alphabet/index.html
+++ b/pashto/lessons/alphabet/index.html
@@ -31,6 +31,15 @@
             </div>
         </nav>
 
+        <nav class="p-3" style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="/">Home</a></li>
+                <li class="breadcrumb-item"><a href="/pashto/">Pashto</a></li>
+                <li class="breadcrumb-item"><a href="/pashto/lessons/">Lessons</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Alphabet</li>
+            </ol>
+        </nav>
+
         <div class="container-fluid mt-3">
             <h1 class="text-center">Pashto Lessons</h1>
 
