Improve page layout

--- a/pashto/lessons/diacritics/index.html
+++ b/pashto/lessons/diacritics/index.html
@@ -53,14 +53,12 @@
 
             <h2>The Pashto Diacritics</h2>
 
-            <div class="d-flex flex-wrap flex-row mb-5">
-                <p style="max-width: 86%;">Below are the diacritics of Pashto. Since Pashto is written from
-                        right to left, I have similarly arranged the diacritics from right to left below. The colored image shows
-                        how I have labeled the letters.
-                </p>
+            <p>Below are the diacritics of Pashto. Since Pashto is written from 
+                right to left, I have similarly arranged the diacritics from right to left below. The colored image shows
+                how I have labeled the letters.
+            </p>
 
-                <img class="img-thumbnail" src="/assets/diacritic_example.png" alt="Example of how I arranged the diacritics">
-            </div>
+            <img class="img-thumbnail" src="/assets/diacritic_example.png" alt="Example of how I arranged the diacritics">
 
             <div class="d-flex flex-wrap justify-content-center flex-row-reverse gap-1">
                 <img class="img-thumbnail" src="/assets/zwar.png" alt="zwar">
