Fix broken button link

--- a/pashto/lessons/diacritics/index.html
+++ b/pashto/lessons/diacritics/index.html
@@ -78,7 +78,7 @@
 
             <img class="img-thumbnail" src="/assets/diacritic_q1.png" alt="Question 1">
 
-            <a class="btn btn-primary" data-bs-toggle="collapse" role="button" aria-expanded="false" aria-controls="diacritic_q1">Click to see the answer</a>
+            <a class="btn btn-primary" data-bs-toggle="collapse" href="#diacritic_q1" role="button" aria-expanded="false" aria-controls="diacritic_q1">Click to see the answer</a>
 
             <div class="collapse" id="diacritic_q1">
                 <img class="img-thumbnail" src="/assets/diacritic_a1.png" alt="Answer 1">
