Improve page layout

--- a/pashto/lessons/diacritics/index.html
+++ b/pashto/lessons/diacritics/index.html
@@ -60,7 +60,7 @@
 
             <img class="img-thumbnail" src="/assets/diacritic_example.png" alt="Example of how I arranged the diacritics">
 
-            <div class="d-flex flex-wrap justify-content-center flex-row-reverse gap-1">
+            <div class="d-flex flex-wrap justify-content-end flex-row-reverse gap-1 my-3">
                 <img class="img-thumbnail" src="/assets/zwar.png" alt="zwar">
                 <img class="img-thumbnail" src="/assets/zwarakay.png" alt="zwarakay">
                 <img class="img-thumbnail" src="/assets/zer.png" alt="zer">
