Add another example for diacritic practice

--- a/pashto/lessons/diacritics/index.html
+++ b/pashto/lessons/diacritics/index.html
@@ -41,6 +41,7 @@
         </nav>
 
         <div class="container-fluid">
+
             <h1 class="text-center">Diacritics</h1>
 
             <h2>What Are Diacritics?</h2>
@@ -81,7 +82,12 @@
 
                 <div class="d-flex flex-wrap justify-content-center flex-column gap-1">
                     <img class="img-thumbnail" src="/assets/diacritic_q1.png" alt="Question 1">
-                    <a class="btn btn-primary my-3" data-bs-toggle="collapse" href="#diacritic_q1" role="button" aria-expanded="false" aria-controls="diacritic_q1" onclick="diacritic_answer()">Click to see the answer</a>
+                    <a class="btn btn-primary my-3" data-bs-toggle="collapse" href="#diacritic_q1" role="button" aria-expanded="false" aria-controls="diacritic_q1" onclick="diacritic_answer1()">Answer</a>
+                </div>
+
+                <div class="d-flex flex-wrap justify-content-center flex-column gap-1">
+                    <img class="img-thumbnail" src="/assets/diacritic_q2.png" alt="Question 2">
+                    <a class="btn btn-primary my-3" data-bs-toggle="collapse" href="#diacritic_q2" role="button" aria-expanded="false" aria-controls="diacritic_q2" onclick="diacritic_answer2()">Answer</a>
                 </div>
 
             </div>
@@ -89,6 +95,11 @@
             <div class="collapse" id="diacritic_q1">
                 <img class="img-thumbnail" src="/assets/diacritic_a1.png" alt="Answer 1">
             </div>
+
+            <div class="collapse" id="diacritic_q2">
+                <img class="img-thumbnail" src="/assets/diacritic_a2.png" alt="Answer 2">
+            </div>
+
         </div>
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
