Improve margin spacing for better readability

--- a/pashto/lessons/alphabet/index.html
+++ b/pashto/lessons/alphabet/index.html
@@ -59,7 +59,7 @@
 
             <h1 class="text-center">Isolated Form</h1>
 
-            <div class="d-flex flex-wrap justify-content-center flex-row-reverse gap-1">
+            <div class="d-flex flex-wrap justify-content-center flex-row-reverse gap-1 mb-5">
                 <img class="img-thumbnail" src="/assets/alif_isolated.png" alt="alif">
                 <img class="img-thumbnail" src="/assets/be_isolated.png" alt="be">
                 <img class="img-thumbnail" src="/assets/pe_isolated.png" alt="pe">
@@ -108,7 +108,7 @@
 
             <h1 class="text-center">Initial Form</h1>
 
-            <div class="d-flex flex-wrap justify-content-center flex-row-reverse gap-1">
+            <div class="d-flex flex-wrap justify-content-center flex-row-reverse gap-1 mb-5">
                 <img class="img-thumbnail" src="/assets/alif_initial.png" alt="alif">
                 <img class="img-thumbnail" src="/assets/be_initial.png" alt="be">
                 <img class="img-thumbnail" src="/assets/pe_initial.png" alt="pe">
@@ -153,7 +153,7 @@
 
             <h1 class="text-center">Medial Form</h1>
 
-            <div class="d-flex flex-wrap justify-content-center flex-row-reverse gap-1">
+            <div class="d-flex flex-wrap justify-content-center flex-row-reverse gap-1 mb-5">
                 <img class="img-thumbnail" src="/assets/alif_medial.png" alt="alif">
                 <img class="img-thumbnail" src="/assets/be_medial.png" alt="be">
                 <img class="img-thumbnail" src="/assets/pe_medial.png" alt="pe">
